# app2

./: README.md  package.json  release-advanced.sh  release.sh  vite.config.js
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
